--- a/frontend-nuxt3/package.json
+++ b/frontend-nuxt3/package.json
@@ -6,6 +6,7 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "nuxt-windicss": "^2.2.2",
     "nuxt3": "latest"
   }
 }
